fix: white space

--- a/src/tabs/index.scss
+++ b/src/tabs/index.scss
@@ -76,6 +76,7 @@
         padding: var(--o-tabs-tab-padding);
         font-size: var(--o-tabs-tab-font-size);
         box-sizing: border-box;
+        white-space: initial;
     }
     &--line {
         position: absolute;
